[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Textures/Interfaz de usuario/altimetria.png" type="Texture" id=1]
[ext_resource path="res://Assets/Font/ghaitsa_2/Ghaitsa.otf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/Recta_Transfromaciones/scripts/Plano_otros.gd" type="Script" id=3]
[ext_resource path="res://Assets/Font/Arial/Arialn.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 250
outline_color = Color( 1, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="SphereMesh" id=2]
radius = 8.0
height = 16.0

[sub_resource type="DynamicFont" id=3]
size = 25
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 25
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 30
use_filter = true
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
script = ExtResource( 3 )

[node name="Imagen_text" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="back_2" type="ColorRect" parent="Imagen_text"]
margin_left = -971.0
margin_top = -556.0
margin_right = 970.0
margin_bottom = -1.0
color = Color( 0.843137, 0.964706, 0.984314, 0.152941 )

[node name="TextureRect" type="TextureRect" parent="Imagen_text"]
modulate = Color( 1, 1, 1, 0.164706 )
margin_left = -967.0
margin_top = -1150.0
margin_right = 969.0
margin_bottom = 591.0
texture = ExtResource( 1 )
expand = true

[node name="back_3" type="ColorRect" parent="Imagen_text"]
margin_left = -971.0
margin_top = 3.0
margin_right = 970.0
margin_bottom = 545.0
color = Color( 0.384314, 0.839216, 1, 0.196078 )

[node name="Plano" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0.470588 )

[node name="Origen" type="Position2D" parent="Plano"]

[node name="Rect_X" type="ColorRect" parent="Plano/Origen"]
margin_left = -1001.0
margin_top = -1.0
margin_right = 1004.0
margin_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Rect_X2" type="ColorRect" parent="Plano/Origen"]
margin_top = 1003.0
margin_right = 2005.0
margin_bottom = 1004.0
rect_rotation = -90.0
color = Color( 0, 0, 0, 1 )

[node name="X" type="HBoxContainer" parent="Plano/Origen"]
margin_left = -1088.0
margin_top = -4.0
margin_right = 20682.0
margin_bottom = 76.0
rect_scale = Vector2( 0.1, 0.1 )
custom_constants/separation = 918
alignment = 1

[node name="Uni_" type="TextureRect" parent="Plano/Origen/X"]
margin_left = 1705.0
margin_right = 1705.0
margin_bottom = 80.0

[node name="Uni_2" type="TextureRect" parent="Plano/Origen/X"]
margin_left = 2623.0
margin_right = 2623.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( -2613, 70 )

[node name="text" type="Label" parent="Plano/Origen/X/Uni_2"]
margin_left = -45.0
margin_top = 80.0
margin_right = 118.0
margin_bottom = 322.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "-900"

[node name="Uni_3" type="TextureRect" parent="Plano/Origen/X"]
margin_left = 3541.0
margin_right = 3541.0
margin_bottom = 80.0

[node name="text" type="Label" parent="Plano/Origen/X/Uni_3"]
margin_left = -45.0
margin_top = 80.0
margin_right = 118.0
margin_bottom = 322.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "-800"

[node name="Uni_4" type="TextureRect" parent="Plano/Origen/X"]
margin_left = 4459.0
margin_right = 4459.0
margin_bottom = 80.0

[node name="text" type="Label" parent="Plano/Origen/X/Uni_4"]
margin_left = -45.0
margin_top = 80.0
margin_right = 118.0
margin_bottom = 322.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "-700"

[node name="Uni_5" type="TextureRect" parent="Plano/Origen/X"]
margin_left = 5377.0
margin_right = 5377.0
margin_bottom = 80.0

[node name="text" type="Label" parent="Plano/Origen/X/Uni_5"]
margin_left = -45.0
margin_top = 80.0
margin_right = 118.0
margin_bottom = 322.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "-600"

[node name="Uni_6" type="TextureRect" parent="Plano/Origen/X"]
margin_left = 6295.0
margin_right = 6295.0
margin_bottom = 80.0

[node name="text" type="Label" parent="Plano/Origen/X/Uni_6"]
margin_left = -45.0
margin_top = 80.0
margin_right = 118.0
margin_bottom = 322.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "-500"

[node name="Uni_7" type="TextureRect" parent="Plano/Origen/X"]
margin_left = 7213.0
margin_right = 7213.0
margin_bottom = 80.0

[node name="text" type="Label" parent="Plano/Origen/X/Uni_7"]
margin_left = -45.0
margin_top = 80.0
margin_right = 118.0
margin_bottom = 322.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "-400"

[node name="Uni_8" type="TextureRect" parent="Plano/Origen/X"]
margin_left = 8131.0
margin_right = 8131.0
margin_bottom = 80.0

[node name="text" type="Label" parent="Plano/Origen/X/Uni_8"]
margin_left = -45.0
margin_top = 80.0
margin_right = 118.0
margin_bottom = 322.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "-300"

[node name="Uni_9" type="TextureRect" parent="Plano/Origen/X"]
margin_left = 9049.0
margin_right = 9049.0
margin_bottom = 80.0

[node name="text" type="Label" parent="Plano/Origen/X/Uni_9"]
margin_left = -45.0
margin_top = 80.0
margin_right = 118.0
margin_bottom = 322.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "-200
"

[node name="Uni_10" type="TextureRect" parent="Plano/Origen/X"]
margin_left = 9967.0
margin_right = 9967.0
margin_bottom = 80.0

[node name="text" type="Label" parent="Plano/Origen/X/Uni_10"]
margin_left = -45.0
margin_top = 80.0
margin_right = 118.0
margin_bottom = 322.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "-100"

[node name="Uni_11" type="TextureRect" parent="Plano/Origen/X"]
margin_left = 10885.0
margin_right = 10885.0
margin_bottom = 80.0

[node name="text" type="Label" parent="Plano/Origen/X/Uni_11"]
margin_left = -45.0
margin_top = 80.0
margin_right = 118.0
margin_bottom = 322.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="Uni_12" type="TextureRect" parent="Plano/Origen/X"]
margin_left = 11803.0
margin_right = 11803.0
margin_bottom = 80.0

[node name="text" type="Label" parent="Plano/Origen/X/Uni_12"]
margin_left = -123.0
margin_top = 80.0
margin_right = 277.0
margin_bottom = 322.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "100"

[node name="Uni_13" type="TextureRect" parent="Plano/Origen/X"]
margin_left = 12721.0
margin_right = 12721.0
margin_bottom = 80.0

[node name="text" type="Label" parent="Plano/Origen/X/Uni_13"]
margin_left = -111.0
margin_top = 80.0
margin_right = 289.0
margin_bottom = 322.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "200"

[node name="Uni_14" type="TextureRect" parent="Plano/Origen/X"]
margin_left = 13639.0
margin_right = 13639.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( -5909, 320 )

[node name="text" type="Label" parent="Plano/Origen/X/Uni_14"]
margin_left = -111.0
margin_top = 80.0
margin_right = 289.0
margin_bottom = 322.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "300"

[node name="Uni_15" type="TextureRect" parent="Plano/Origen/X"]
margin_left = 14557.0
margin_right = 14557.0
margin_bottom = 80.0

[node name="text" type="Label" parent="Plano/Origen/X/Uni_15"]
margin_left = -111.0
margin_top = 80.0
margin_right = 289.0
margin_bottom = 322.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "400"

[node name="Uni_16" type="TextureRect" parent="Plano/Origen/X"]
margin_left = 15475.0
margin_right = 15475.0
margin_bottom = 80.0

[node name="text" type="Label" parent="Plano/Origen/X/Uni_16"]
margin_left = -111.0
margin_top = 80.0
margin_right = 289.0
margin_bottom = 322.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "500"

[node name="Uni_17" type="TextureRect" parent="Plano/Origen/X"]
margin_left = 16393.0
margin_right = 16393.0
margin_bottom = 80.0

[node name="text" type="Label" parent="Plano/Origen/X/Uni_17"]
margin_left = -111.0
margin_top = 80.0
margin_right = 289.0
margin_bottom = 322.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "600"

[node name="Uni_18" type="TextureRect" parent="Plano/Origen/X"]
margin_left = 17311.0
margin_right = 17311.0
margin_bottom = 80.0

[node name="text" type="Label" parent="Plano/Origen/X/Uni_18"]
margin_left = -111.0
margin_top = 80.0
margin_right = 289.0
margin_bottom = 322.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "700"

[node name="Uni_19" type="TextureRect" parent="Plano/Origen/X"]
margin_left = 18229.0
margin_right = 18229.0
margin_bottom = 80.0

[node name="text" type="Label" parent="Plano/Origen/X/Uni_19"]
margin_left = -111.0
margin_top = 80.0
margin_right = 289.0
margin_bottom = 322.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "800"

[node name="Uni_20" type="TextureRect" parent="Plano/Origen/X"]
margin_left = 19147.0
margin_right = 19147.0
margin_bottom = 80.0

[node name="text" type="Label" parent="Plano/Origen/X/Uni_20"]
margin_left = -111.0
margin_top = 80.0
margin_right = 289.0
margin_bottom = 322.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "900"

[node name="Uni_21" type="TextureRect" parent="Plano/Origen/X"]
margin_left = 20065.0
margin_right = 20065.0
margin_bottom = 80.0

[node name="y" type="HBoxContainer" parent="Plano/Origen"]
margin_left = 4.0
margin_top = -1088.48
margin_right = 21774.0
margin_bottom = -1008.48
rect_rotation = 90.0
rect_scale = Vector2( 0.1, 0.1 )
custom_constants/separation = 918
alignment = 1

[node name="Uni_" type="TextureRect" parent="Plano/Origen/y"]
margin_left = 1705.0
margin_right = 1705.0
margin_bottom = 80.0

[node name="Uni_2" type="TextureRect" parent="Plano/Origen/y"]
margin_left = 2623.0
margin_right = 2623.0
margin_bottom = 80.0

[node name="Uni_3" type="TextureRect" parent="Plano/Origen/y"]
margin_left = 3541.0
margin_right = 3541.0
margin_bottom = 80.0

[node name="Uni_4" type="TextureRect" parent="Plano/Origen/y"]
margin_left = 4459.0
margin_right = 4459.0
margin_bottom = 80.0

[node name="Uni_5" type="TextureRect" parent="Plano/Origen/y"]
margin_left = 5377.0
margin_right = 5377.0
margin_bottom = 80.0

[node name="Uni_6" type="TextureRect" parent="Plano/Origen/y"]
margin_left = 6295.0
margin_right = 6295.0
margin_bottom = 80.0

[node name="text" type="Label" parent="Plano/Origen/y/Uni_6"]
margin_left = -110.0
margin_top = 550.0
margin_right = 370.0
margin_bottom = 792.0
rect_rotation = -90.0
custom_colors/font_color = Color( 0.109804, 0.737255, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "500"

[node name="Uni_7" type="TextureRect" parent="Plano/Origen/y"]
margin_left = 7213.0
margin_right = 7213.0
margin_bottom = 80.0

[node name="text" type="Label" parent="Plano/Origen/y/Uni_7"]
margin_left = -110.0
margin_top = 550.0
margin_right = 370.0
margin_bottom = 792.0
rect_rotation = -90.0
custom_colors/font_color = Color( 0.109804, 0.737255, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "400"

[node name="Uni_8" type="TextureRect" parent="Plano/Origen/y"]
margin_left = 8131.0
margin_right = 8131.0
margin_bottom = 80.0

[node name="text" type="Label" parent="Plano/Origen/y/Uni_8"]
margin_left = -110.0
margin_top = 550.0
margin_right = 370.0
margin_bottom = 792.0
rect_rotation = -90.0
custom_colors/font_color = Color( 0.109804, 0.737255, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "300"

[node name="Uni_9" type="TextureRect" parent="Plano/Origen/y"]
margin_left = 9049.0
margin_right = 9049.0
margin_bottom = 80.0

[node name="text" type="Label" parent="Plano/Origen/y/Uni_9"]
margin_left = -110.0
margin_top = 550.0
margin_right = 370.0
margin_bottom = 792.0
rect_rotation = -90.0
custom_colors/font_color = Color( 0.109804, 0.737255, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "200"

[node name="Uni_10" type="TextureRect" parent="Plano/Origen/y"]
margin_left = 9967.0
margin_right = 9967.0
margin_bottom = 80.0

[node name="text" type="Label" parent="Plano/Origen/y/Uni_10"]
margin_left = -110.0
margin_top = 550.0
margin_right = 370.0
margin_bottom = 792.0
rect_rotation = -90.0
custom_colors/font_color = Color( 0.109804, 0.737255, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "100"

[node name="Uni_11" type="TextureRect" parent="Plano/Origen/y"]
margin_left = 10885.0
margin_right = 10885.0
margin_bottom = 80.0

[node name="text" type="Label" parent="Plano/Origen/y/Uni_11"]
margin_left = -110.0
margin_top = 230.0
margin_right = 60.0
margin_bottom = 472.0
rect_rotation = -90.0
custom_colors/font_color = Color( 0.109804, 0.737255, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="Uni_12" type="TextureRect" parent="Plano/Origen/y"]
margin_left = 11803.0
margin_right = 11803.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 133.936, 4552.41 )

[node name="text" type="Label" parent="Plano/Origen/y/Uni_12"]
margin_left = -110.0
margin_top = 540.0
margin_right = 362.0
margin_bottom = 782.0
rect_rotation = -90.0
custom_colors/font_color = Color( 0.109804, 0.737255, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "-100"

[node name="Uni_13" type="TextureRect" parent="Plano/Origen/y"]
margin_left = 12721.0
margin_right = 12721.0
margin_bottom = 80.0

[node name="text" type="Label" parent="Plano/Origen/y/Uni_13"]
margin_left = -110.0
margin_top = 610.0
margin_right = 415.0
margin_bottom = 852.0
rect_rotation = -90.0
custom_colors/font_color = Color( 0.109804, 0.737255, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "-200"

[node name="Uni_14" type="TextureRect" parent="Plano/Origen/y"]
margin_left = 13639.0
margin_right = 13639.0
margin_bottom = 80.0

[node name="text" type="Label" parent="Plano/Origen/y/Uni_14"]
margin_left = -110.0
margin_top = 610.0
margin_right = 415.0
margin_bottom = 852.0
rect_rotation = -90.0
custom_colors/font_color = Color( 0.109804, 0.737255, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "-300"

[node name="Uni_15" type="TextureRect" parent="Plano/Origen/y"]
margin_left = 14557.0
margin_right = 14557.0
margin_bottom = 80.0

[node name="text" type="Label" parent="Plano/Origen/y/Uni_15"]
margin_left = -110.0
margin_top = 610.0
margin_right = 415.0
margin_bottom = 852.0
rect_rotation = -90.0
custom_colors/font_color = Color( 0.109804, 0.737255, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "-400"

[node name="Uni_16" type="TextureRect" parent="Plano/Origen/y"]
margin_left = 15475.0
margin_right = 15475.0
margin_bottom = 80.0

[node name="text" type="Label" parent="Plano/Origen/y/Uni_16"]
margin_left = -110.0
margin_top = 610.0
margin_right = 415.0
margin_bottom = 852.0
rect_rotation = -90.0
custom_colors/font_color = Color( 0.109804, 0.737255, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "-500"

[node name="Uni_17" type="TextureRect" parent="Plano/Origen/y"]
margin_left = 16393.0
margin_right = 16393.0
margin_bottom = 80.0

[node name="Uni_18" type="TextureRect" parent="Plano/Origen/y"]
margin_left = 17311.0
margin_right = 17311.0
margin_bottom = 80.0

[node name="Uni_19" type="TextureRect" parent="Plano/Origen/y"]
margin_left = 18229.0
margin_right = 18229.0
margin_bottom = 80.0

[node name="Uni_20" type="TextureRect" parent="Plano/Origen/y"]
margin_left = 19147.0
margin_right = 19147.0
margin_bottom = 80.0

[node name="Uni_21" type="TextureRect" parent="Plano/Origen/y"]
margin_left = 20065.0
margin_right = 20065.0
margin_bottom = 80.0

[node name="ColorRect" type="ColorRect" parent="Plano"]
margin_top = -556.0
margin_right = 960.0
margin_bottom = 1.0
color = Color( 1, 1, 1, 0.254902 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
current = true

[node name="Control" type="Control" parent="."]

[node name="llegada_x" type="Line2D" parent="Control"]
width = 3.5
default_color = Color( 0.196078, 0, 1, 0.509804 )

[node name="Line2D" type="Line2D" parent="Control"]
width = 3.5
default_color = Color( 0.00784314, 0, 1, 1 )
sharp_limit = 0.2
round_precision = 10
antialiased = true

[node name="origen" type="Position2D" parent="Control"]

[node name="Inicio" type="MeshInstance2D" parent="Control/origen"]
modulate = Color( 1, 0, 0, 1 )
mesh = SubResource( 2 )

[node name="Label" type="Label" parent="Control/origen/Inicio"]
margin_left = -67.0
margin_top = -42.0
margin_right = 28.0
margin_bottom = -3.0
custom_fonts/font = SubResource( 3 )
text = "Inicio"

[node name="Llegada" type="MeshInstance2D" parent="Control/origen"]
modulate = Color( 0, 0.0627451, 1, 1 )
position = Vector2( 100, -30 )
mesh = SubResource( 2 )

[node name="Label" type="Label" parent="Control/origen/Llegada"]
margin_left = -63.0
margin_top = -33.0
margin_right = 63.0
margin_bottom = 6.0
custom_fonts/font = SubResource( 3 )
text = "llegada(2,2)"

[node name="car" type="Sprite" parent="Control/origen"]
scale = Vector2( 0.05, 0.05 )
offset = Vector2( 0, -380 )

[node name="Interacccion" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Llegada_X" type="HSlider" parent="Interacccion"]
margin_left = -945.0
margin_top = -520.0
margin_right = -576.0
margin_bottom = -504.0
min_value = 100.0
max_value = 800.0
value = 100.0

[node name="Label" type="Label" parent="Interacccion/Llegada_X"]
margin_left = 374.0
margin_top = -11.0
margin_right = 556.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.329412, 0.329412, 0.329412, 1 )
custom_fonts/font = SubResource( 4 )
text = "llegada.x = \"     \""

[node name="Llegada_Y" type="HSlider" parent="Interacccion"]
margin_left = -944.0
margin_top = -481.0
margin_right = -577.0
margin_bottom = -465.0
max_value = 510.0
value = 30.0

[node name="Label" type="Label" parent="Interacccion/Llegada_Y"]
margin_left = 374.0
margin_top = -11.0
margin_right = 556.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.329412, 0.329412, 0.329412, 1 )
custom_fonts/font = SubResource( 4 )
text = "llegada.y = \"     \""

[node name="salida_y" type="HSlider" parent="Interacccion"]
margin_left = -944.0
margin_top = -446.0
margin_right = -577.0
margin_bottom = -430.0
max_value = 510.0

[node name="Label" type="Label" parent="Interacccion/salida_y"]
margin_left = 374.0
margin_top = -4.0
margin_right = 556.0
margin_bottom = 21.0
custom_colors/font_color = Color( 0.329412, 0.329412, 0.329412, 1 )
custom_fonts/font = SubResource( 4 )
text = "salida.y = \"     \""

[node name="Pendiente_show" type="Control" parent="Interacccion"]

[node name="m" type="Label" parent="Interacccion/Pendiente_show"]
margin_left = -941.0
margin_top = -353.0
margin_right = -886.0
margin_bottom = -324.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "m = "

[node name="y_2" type="Label" parent="Interacccion/Pendiente_show"]
margin_left = -872.0
margin_top = -369.0
margin_right = -814.0
margin_bottom = -340.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "100"

[node name="recta2" type="ColorRect" parent="Interacccion/Pendiente_show"]
margin_left = -820.0
margin_top = -357.0
margin_right = -808.0
margin_bottom = -355.0
color = Color( 0, 0, 0, 1 )

[node name="y_1" type="Label" parent="Interacccion/Pendiente_show"]
margin_left = -806.0
margin_top = -369.0
margin_right = -746.0
margin_bottom = -340.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "100"

[node name="recta" type="ColorRect" parent="Interacccion/Pendiente_show"]
margin_left = -875.0
margin_top = -341.0
margin_right = -757.0
margin_bottom = -338.0
color = Color( 0, 0, 0, 1 )

[node name="x_2" type="Label" parent="Interacccion/Pendiente_show"]
margin_left = -873.0
margin_top = -337.0
margin_right = -815.0
margin_bottom = -308.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "100"

[node name="recta3" type="ColorRect" parent="Interacccion/Pendiente_show"]
margin_left = -821.0
margin_top = -325.0
margin_right = -809.0
margin_bottom = -323.0
color = Color( 0, 0, 0, 1 )

[node name="x_1" type="Label" parent="Interacccion/Pendiente_show"]
margin_left = -807.0
margin_top = -337.0
margin_right = -747.0
margin_bottom = -308.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="igual" type="Label" parent="Interacccion/Pendiente_show"]
margin_left = -743.0
margin_top = -353.0
margin_right = -724.0
margin_bottom = -324.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "= "

[node name="result" type="Label" parent="Interacccion/Pendiente_show"]
margin_left = -722.0
margin_top = -354.0
margin_right = -595.0
margin_bottom = -325.0
custom_colors/font_color = Color( 0.431373, 0.431373, 0.431373, 1 )
custom_fonts/font = SubResource( 5 )
text = "215354.54"

[node name="polinomio" type="Label" parent="Interacccion/Pendiente_show"]
margin_left = -942.0
margin_top = -285.0
margin_right = -888.0
margin_bottom = -256.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "y  =    mx+b    = "

[node name="result_poli" type="Label" parent="Interacccion/Pendiente_show"]
margin_left = -723.0
margin_top = -285.0
margin_right = -567.0
margin_bottom = -256.0
custom_colors/font_color = Color( 0.431373, 0.431373, 0.431373, 1 )
custom_fonts/font = SubResource( 5 )
text = "45412 x + 32"
